--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,8 @@ dependencies:
   image_picker: ^1.0.0
   http: ^1.2.2
   webview_flutter: ^4.7.0
-  
+  intl: ^0.19.0
+
 
 dev_dependencies:
   flutter_test:
